install/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hpong
  name: hpong
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hpong
  template:
    metadata:
      labels:
        app: hpong
        lala: kaka
    spec:
      containers:
      - image: illuher/hpong:0.0.3-scratch
        name: hpong
        livenessProbe:
          httpGet:
            path: /ping
            port: 8081
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 1
          httpGet:
            path: /ping
            port: 8081
        ports:
        - containerPort: 8081
        resources:
          limits:
            cpu: "0.1"
            memory: "50M"
          requests:
            memory: "50M"
