install/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hpong
spec:
  type: NodePort
  selector:
    app: hpong
  ports:
  - protocol: TCP
    targetPort: 8081
    port: 80
    nodePort: 30081
